# Tarea-1-Paradigmas

./: Auto.cpp  Auto.h  CMakeLists.txt  Camion.cpp  Camion.h  Cliente.cpp  Cliente.h  Compra.h  Moto.cpp  Moto.h  README.md  TAREA 1-1.docx  Vehiculo.cpp  Vehiculo.h  Venta.cpp  Venta.h  tarea.cpp  vehicles.json  ~$REA 1-1.doc  ~$REA 1-1.docx
